--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "install": "^0.13.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-af-video-player": "^0.2.1",
+    "react-native-af-video-player-updated": "^0.2.3",
+    "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-keep-awake": "^4.0.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-orientation": "^3.1.3",
     "react-native-razorpay": "^2.2.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.0-alpha8",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1"
